--- a/css/theme.css
+++ b/css/theme.css
@@ -71,14 +71,21 @@ a {
     border: 1px solid #b5b5b5;
     color: #fff !important; }
 
-.section-padding {
+.sp {
   padding: 5% 0; }
 
-.section-header h5 {
-  border-bottom: 1px solid #757575;
-  border-left: 7px solid #757575;
-  padding-left: 5px;
-  text-transform: capitalize; }
+.section-header {
+  border-bottom: 1px dotted #000;
+  margin-bottom: 30px; }
+  .section-header h4 {
+    width: 150px;
+    background: #f1f1f1;
+    border-left: 5px solid #4F7D8E;
+    font-weight: 600;
+    padding: 8px 20px;
+    text-transform: capitalize;
+    position: relative;
+    top: 28px; }
 
 .section-content {
   width: 85%;
@@ -311,6 +318,15 @@ a {
 .blog-wrapper {
   width: 85%;
   margin: 0 auto; }
+  .blog-wrapper .main-content .about-us .about-button a {
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    border-radius: 3px;
+    background-clip: padding-box;
+    font-size: 13px;
+    padding: 8px;
+    text-transform: uppercase; }
   .blog-wrapper .main-content .post {
     position: relative;
     background: #fff;
