--- a/css/theme.scss
+++ b/css/theme.scss
@@ -177,15 +177,21 @@ a{
     }
 }
 
-.section-padding{padding: 5% 0;}
+.sp{padding: 5% 0;}
 
 .section-header{
+	border-bottom: 1px dotted #000;
+    margin-bottom: 30px;
 
-	h5{
-		border-bottom: 1px solid #757575;
-    	border-left: 7px solid #757575;
-    	padding-left: 5px;
-     	text-transform: capitalize;
+	h4{
+	    width: 150px;
+	    background: #f1f1f1;
+	    border-left: 5px solid #4F7D8E;
+	    font-weight: 600;
+	    padding: 8px 20px;
+	    text-transform: capitalize;
+        position: relative;
+	    top: 28px;
 	}
 }
 
@@ -499,6 +505,17 @@ a{
     margin: 0 auto;
 
     .main-content{
+
+    	.about-us{
+    		.about-button{
+    			a {
+					@include border-radius(3px);
+				    font-size: 13px;
+					padding: 8px;
+					text-transform: uppercase;
+				}
+    		}
+    	}
     	.post{
     		position: relative;
     		background:$wcolor;
