--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -23,8 +23,16 @@
   ##Screen = B/w 320px to 479px
 */
 @media only screen and (min-width: 1400px) and (max-width: 1920px) {
+  .header {
+    width: 53.6%;
+    margin: auto; }
+
+  .home-slider {
+    width: 53.6%;
+    margin: auto; }
+
   .blog-wrapper {
-    width: 85%; } }
+    width: 50%; } }
 @media only screen and (min-width: 767px) and (max-width: 1024px) and (orientation: landscape) {
   .home-slider #main-slider img {
     height: 370px; }
