--- a/css/theme.css
+++ b/css/theme.css
@@ -8,7 +8,7 @@ html {
   overflow-x: hidden; }
 
 body {
-  background: #f1f1f1;
+  background: url(../images/sitebg.gif) repeat-y center top scroll;
   font-family: "Lato", sans-serif; }
 
 ul li {
@@ -107,6 +107,8 @@ a {
     color: #fff; }
 
 .header {
+  width: 74.6%;
+  margin: auto;
   background: #fff; }
   .header .logo-social {
     position: relative; }
@@ -242,81 +244,84 @@ a {
         z-index: 10; }
 
 /* CSS For Home Slider Section */
-.home-slider #main-slider .slider-text-right {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0000008a;
-  cursor: pointer; }
-  .home-slider #main-slider .slider-text-right span {
+.home-slider {
+  width: 74.6%;
+  margin: auto; }
+  .home-slider #main-slider .slider-text-right {
     position: absolute;
-    top: 75px;
-    right: 35px;
-    width: 45%;
-    color: #fff;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: right; }
-  .home-slider #main-slider .slider-text-right .post-info-text {
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #0000008a;
+    cursor: pointer; }
+    .home-slider #main-slider .slider-text-right span {
+      position: absolute;
+      top: 75px;
+      right: 35px;
+      width: 45%;
+      color: #fff;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 60px;
+      text-align: right; }
+    .home-slider #main-slider .slider-text-right .post-info-text {
+      position: absolute;
+      bottom: 20px;
+      right: 35px;
+      color: #fff;
+      font-size: 15px;
+      text-align: right; }
+      .home-slider #main-slider .slider-text-right .post-info-text p {
+        margin: 0; }
+  .home-slider #main-slider .slider-text-left {
     position: absolute;
-    bottom: 20px;
-    right: 35px;
-    color: #fff;
-    font-size: 15px;
-    text-align: right; }
-    .home-slider #main-slider .slider-text-right .post-info-text p {
-      margin: 0; }
-.home-slider #main-slider .slider-text-left {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0000008a;
-  cursor: pointer; }
-  .home-slider #main-slider .slider-text-left span {
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #0000008a;
+    cursor: pointer; }
+    .home-slider #main-slider .slider-text-left span {
+      position: absolute;
+      top: 75px;
+      left: 35px;
+      width: 45%;
+      color: #fff;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 60px;
+      text-align: left; }
+    .home-slider #main-slider .slider-text-left .post-info-text {
+      position: absolute;
+      bottom: 20px;
+      left: 35px;
+      color: #fff;
+      font-size: 15px;
+      text-align: left; }
+      .home-slider #main-slider .slider-text-left .post-info-text p {
+        margin: 0; }
+  .home-slider #main-slider .owl-nav .owl-prev, .home-slider #main-slider .owl-nav .owl-next {
     position: absolute;
-    top: 75px;
-    left: 35px;
-    width: 45%;
+    top: 43%;
+    left: 80px;
+    width: 55px;
+    height: 55px;
+    background: transparent;
+    border: 1px solid #fff;
+    border-radius: 50%;
     color: #fff;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: left; }
-  .home-slider #main-slider .slider-text-left .post-info-text {
-    position: absolute;
-    bottom: 20px;
-    left: 35px;
-    color: #fff;
-    font-size: 15px;
-    text-align: left; }
-    .home-slider #main-slider .slider-text-left .post-info-text p {
-      margin: 0; }
-.home-slider #main-slider .owl-nav .owl-prev, .home-slider #main-slider .owl-nav .owl-next {
-  position: absolute;
-  top: 43%;
-  left: 80px;
-  width: 55px;
-  height: 55px;
-  background: transparent;
-  border: 1px solid #fff;
-  border-radius: 50%;
-  color: #fff;
-  font-size: 35px;
-  line-height: 41px; }
-.home-slider #main-slider .owl-nav .owl-next {
-  left: unset;
-  right: 85px; }
+    font-size: 35px;
+    line-height: 41px; }
+  .home-slider #main-slider .owl-nav .owl-next {
+    left: unset;
+    right: 85px; }
 
 /* CSS For Blog Post Section */
 .blog-wrapper {
-  width: 85%;
+  width: 70%;
   margin: 0 auto; }
   .blog-wrapper .main-content {
     /*CSS For Sevice section*/ }
