--- a/css/theme.scss
+++ b/css/theme.scss
@@ -117,7 +117,7 @@ $gcolor:#9e9e9e;
 html {overflow-x: hidden;}
 
 body {
-	background: #f1f1f1;
+	    background: url(../images/sitebg.gif) repeat-y center top scroll;
     font-family:$theme-font;
   	// overflow-x: hidden;
 }
@@ -221,6 +221,8 @@ a{
 // CSS For Header Section
 
 .header{
+    width: 74.6%;
+    margin: auto;
 	background: $wcolor;
 	.logo-social{
 	    position: relative;
@@ -404,6 +406,8 @@ a{
 /* CSS For Home Slider Section */
 
 .home-slider{
+    width: 74.6%;
+    margin: auto;
 	#main-slider{
 		.slider-text-right{
 			position: absolute;
@@ -501,7 +505,7 @@ a{
 /* CSS For Blog Post Section */
 
 .blog-wrapper{
-	width: 85%;
+	width: 70%;
     margin: 0 auto;
 
     .main-content{
