--- a/css/mediaqueries.scss
+++ b/css/mediaqueries.scss
@@ -7,7 +7,7 @@ $gcolor:#9e9e9e;
   ##Device = Desktops
   ##Screen = 1281px to higher resolution desktops
 */
-$large-desktop: '(min-width: 1400px) and (max-width: 1920px)';
+$large-desktop: '(max-width: 1920px)';
 
 /* 
   ##Device = Laptops, Desktops
@@ -35,42 +35,114 @@ $tablet-landscape: '(min-width: 767px) and (max-width: 1024px) and (orientation:
   ##Screen = B/w 481px to 767px
 */
 
-$phone-landscape: '(min-width: 480px) and (max-width: 766px)';
+$phone-landscape: '(min-width: 481px) and (max-width: 766px)';
 
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
 */
 
-$phone-portrait: '(min-width: 320px) and (max-width: 479px)';
+$phone-portrait: '(min-width: 320px) and (max-width: 480px)';
 
 
 @mixin respond-to($device){
-	@media only screen and #{$device} {
-		@content;
-	}
+  @media only screen and #{$device} {
+    @content;
+  }
 }
 
 
 
 @include respond-to($large-desktop){
 
-  .header{
-    width: 53.6%;
-    margin: auto;
-  }
+  .header{width: 53.6%;}
 
-  .home-slider{
-    width: 53.6%;
-    margin: auto;
-  }
+  .home-slider{width: 53.6%;}
 
-  .blog-wrapper{width: 50%;}
+  .blog-wrapper{width: 53%;}
+
+  .footer{width: 53.6%;}
+
+
+  // CSS For About Page
+  .about{width: 53%;}
+  
+
+  // CSS For Author Page
+  .author{width: 53%;}
+
+
+  // CSS For Contact Page
+  .contact{width: 53%;}
+
+
+  // CSS For 404 Page
+  .error-page{width: 53%;}
+
+}
+
+@media only screen and (max-width: 1440px){
+  .header{width: 70.8%;}
+
+  .home-slider{width: 70.8%;}
+
+  .blog-wrapper{width: 70%;}
+
+  .footer{width: 71%;}
+
+  // CSS For About Page
+  .about{width: 70%;}
+
+  // CSS For Contact Page
+  .contact{width: 70%;}
+
+  // CSS For 404 Page
+  .error-page{width: 70%;}
+}
+
+@include respond-to($normal-desktop){
+
+  .header{width: 79.7%;}
+
+  .home-slider{width: 79.7%;}
+
+  .blog-wrapper{width: 79%;}
+
+  // CSS For Contact Page
+  .contact{width: 77%;}
+
+  // CSS For 404 Page
+  .error-page{width: 95%;}
+}
+
+@include respond-to($tablet-portrait){
+
+  .header{width: 100%;  }
+
+  .home-slider{width: 100%;}
+
+  .blog-wrapper{width: 98%;}
+
+  .footer{width: 100%;}
+
+  // CSS For About Page
+  .about{width: 98%;}
+
+  // CSS For Contact Page
+  .contact{width: 95%;}
+
+  // CSS For 404 Page
+  .error-page{width: 95%;}
 }
 
 @include respond-to($tablet-landscape){
 
+  html,body {overflow-x: hidden;}
+
+  .header{width: 100%;}
+
   .home-slider{
+    width: 100%;
     #main-slider{
 
       img {height: 370px;}
@@ -111,13 +183,27 @@ $phone-portrait: '(min-width: 320px) and (max-width: 479px)';
     }
   }
 
-  .blog-wrapper{width: 95%;}
+  .blog-wrapper{width: 99%;}
+
+  .footer{width: 100%;}
+
+   // CSS For About Page
+  .about{width: 98%;}
+
+  // CSS For Contact Page
+  .contact{width: 95%;}
+
+  // CSS For 404 Page
+  .error-page{width: 95%;}
 }
 
 
 @include respond-to($phone-portrait){
 
+  html,body {overflow-x: hidden;}
+
   .header{
+    width: 100%;
     .logo-social{
 
       .header-left-icon{
@@ -137,6 +223,7 @@ $phone-portrait: '(min-width: 320px) and (max-width: 479px)';
   }
 
   .home-slider{
+    width: 100%;
     #main-slider{
 
       img {height: 370px;}
@@ -177,11 +264,13 @@ $phone-portrait: '(min-width: 320px) and (max-width: 479px)';
     }
   }
 
-	.blog-wrapper{width: 95%;}
+  .blog-wrapper{width: 98%;}
 
-  .extra-footer .section-content {
-    border-top: 0;
+  .extra-footer{
+    .section-content {border-top: 0;}
   }
+
+  .footer{width: 100%;}
 
   // CSS About Page
 
@@ -204,7 +293,10 @@ $phone-portrait: '(min-width: 320px) and (max-width: 479px)';
 
 @include respond-to($phone-landscape){
 
+  html,body {overflow-x: hidden;}
+
   .header{
+    width: 100%;
     .logo-social{
 
       .header-left-icon{
@@ -223,8 +315,15 @@ $phone-portrait: '(min-width: 320px) and (max-width: 479px)';
     }
   }
 
-  .blog-wrapper{width: 95%;}
+  .home-slider{width: 100%;}
+
+  .blog-wrapper{width: 98%;}
+
+  .footer{width: 100%;}
+
+  // CSS For About Page
+  .about{width: 98%;}
+  
+  // CSS For 404 Page
+  .error-page{width: 98%;}
 }
-
-
-
