--- a/css/theme.scss
+++ b/css/theme.scss
@@ -117,9 +117,9 @@ $gcolor:#9e9e9e;
 html {overflow-x: hidden;}
 
 body {
-	    background: url(../images/sitebg.gif) repeat-y center top scroll;
+    background: url(../images/sitebg.gif) repeat-y center top scroll;
     font-family:$theme-font;
-  	// overflow-x: hidden;
+  	overflow-x: hidden;
 }
 
 ul li {list-style: none;}
@@ -506,7 +506,7 @@ a{
 /* CSS For Blog Post Section */
 
 .blog-wrapper{
-	width: 70%;
+	width: 74%;
     margin: 0 auto;
 
     .main-content{
@@ -846,6 +846,8 @@ a{
 // CSS For Footer Section
 
 .footer{
+	width: 74.6%;
+    margin: auto;
     background: $wcolor;
     color: $bcolor;
     text-align: center;
