Theme Color Change and Gallery Slideshow added

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 
 $theme-font: 'Lato', sans-serif;
-$theme-color:#2d2d2d;
+// $theme-color:#2d2d2d;
+$theme-color:#c80f0f;
 $bcolor:#000;
 $wcolor:#fff;
 $gcolor:#9e9e9e;
@@ -166,13 +167,13 @@ a{
 
 .btn-outline{
 	background: transparent;
-    border: 1px solid #b5b5b5;
-    color: #757575;
+    border: 1px solid $theme-color;
+    color: $theme-color;
     @include transition(all,0.4s,ease-out);
 
     &:hover{
-    	background: #757575;
-    	border: 1px solid #b5b5b5;
+    	background: $theme-color;
+    	border: 1px solid $theme-color;
     	color: $wcolor !important;
     }
 }
@@ -186,7 +187,7 @@ a{
 	h5{
 	    width: 200px;
 	    background: #f1f1f1;
-	    border-left: 5px solid #4F7D8E;
+	    border-left: 5px solid $theme-color;
 	    font-weight: 600;
 	    padding: 8px 20px;
 	    text-align: left;
@@ -204,7 +205,7 @@ a{
 .tcolor{color:$theme-color !important;}
 
 .label{
-	background: #477D8C;
+	background: $theme-color;
     color: $wcolor;
     font-size: 12px;
     font-weight: 700;
@@ -213,7 +214,7 @@ a{
     text-transform: uppercase;
 
     &:hover{
-    	background: #477D8C;
+    	background: $theme-color;
     	color:$wcolor;
     }
 }
@@ -232,76 +233,12 @@ a{
 				li{
 					display: inline-block;
 					a{
+						color: $theme-color;
 						cursor: pointer;
 						font-size: 16px;
     					padding: 5px 8px;
 					}
 				}
-			}
-
-			.header-sidebar{
-				position: absolute;
-    			clear: both;
-				a{
-					color: #757575;
-				    cursor: pointer;
-				    font-size: 22px;
-				}
-
-				.sidebar-body{
-					position: absolute;
-    				top: 65px;
-				    width: 425px;
-				    height: auto;
-					background: #f1f1f1;
-				    box-shadow: 0 1px 2px #ddd;
-				    z-index: 20;
-
-				    .close{
-				    	width: 50px;
-					    height: 50px;
-					    background: $wcolor;
-					    border: 1px solid #b5b5b5;
-					    border-radius: 50%;
-					    box-shadow: 0 0 10px #ddd;
-					    font-size: 23px;
-					    font-weight: 300;
-					    line-height: 45px;
-					    opacity: 1;
-					    text-align: center;
-					    position: absolute;
-					    top: -28px;
-					    right: -25px;
-				    }
-
-				    .latest-post{
-				    	.lpost-item{
-				    		.lpost-photo{width:40%;}
-				    		.lpost-text{
-				    			a{
-				    				color: #fff;
-    								font-size: 10px;
-				    			}
-
-				    			h6{
-				    				a {
-				    					color: $bcolor;
-									    font-size: 15px;
-									    font-weight: 600;
-				    				}
-				    			}
-
-				    			time{
-				    				color: #515151;
-								    font-size: 10px;
-								    text-transform: uppercase;
-				    			}
-				    		}
-				    	}
-				    }
-				}
-
-				.active{cursor: default;}
 			}
 		}
 
@@ -364,6 +301,7 @@ a{
 
     				.dropdown-menu{
     					top: 47px;
+					    min-width: 173px;
 					    border: 0;
 					    border-radius: 0;
 					    padding: 0;
@@ -378,16 +316,38 @@ a{
 					    	}
 
 					    	&:hover{
-					    		background: #4F7D8E;
+					    		background: $theme-color;
 					    		cursor: pointer;
 
 					    		a {color:$wcolor;}
 					    	}
 					    }
+
+					    .sub-menu{
+					    	top: -2px;
+				    	    left: 174px;
+
+				    	    li{
+						    	padding:0 18px;
+
+						    	a{
+						    		color:$bcolor;
+						    		font-size: 13px;
+	    							text-align: center;
+						    	}
+
+						    	&:hover{
+						    		background: $theme-color;
+						    		cursor: pointer;
+
+						    		a {color:$wcolor;}
+						    	}
+						    }
+					    }
     				}
 
     				&:hover{
-					    background: #477D8C;
+					    background: $theme-color;
 					    @include transition(all,.5s,ease);
 					    .nav-link{color: $wcolor;}
     				}
@@ -729,7 +689,7 @@ a{
 
     	.side-header{
     		background: #f1f1f1;
-		    border-left: 5px solid #4F7D8E;
+		    border-left: 5px solid $theme-color;
 		    font-weight: 600;
 		    padding: 8px 20px;
 		    text-transform: capitalize;
