--- a/css/theme.css
+++ b/css/theme.css
@@ -45,8 +45,8 @@ a {
   vertical-align: middle; }
 
 .btn-fill {
-  background: #2d2d2d;
-  border: 2px solid #2d2d2d;
+  background: #c80f0f;
+  border: 2px solid #c80f0f;
   color: #fff;
   -webkit-transition: all 0.4s ease-out;
   -moz-transition: all 0.4s ease-out;
@@ -60,16 +60,16 @@ a {
 
 .btn-outline {
   background: transparent;
-  border: 1px solid #b5b5b5;
-  color: #757575;
+  border: 1px solid #c80f0f;
+  color: #c80f0f;
   -webkit-transition: all 0.4s ease-out;
   -moz-transition: all 0.4s ease-out;
   -ms-transition: all 0.4s ease-out;
   -o-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out; }
   .btn-outline:hover {
-    background: #757575;
-    border: 1px solid #b5b5b5;
+    background: #c80f0f;
+    border: 1px solid #c80f0f;
     color: #fff !important; }
 
 .sp {
@@ -81,7 +81,7 @@ a {
   .section-header h5 {
     width: 200px;
     background: #f1f1f1;
-    border-left: 5px solid #4F7D8E;
+    border-left: 5px solid #c80f0f;
     font-weight: 600;
     padding: 8px 20px;
     text-align: left;
@@ -94,10 +94,10 @@ a {
   margin: 0 auto; }
 
 .tcolor {
-  color: #2d2d2d !important; }
+  color: #c80f0f !important; }
 
 .label {
-  background: #477D8C;
+  background: #c80f0f;
   color: #fff;
   font-size: 12px;
   font-weight: 700;
@@ -105,7 +105,7 @@ a {
   text-align: center;
   text-transform: uppercase; }
   .label:hover {
-    background: #477D8C;
+    background: #c80f0f;
     color: #fff; }
 
 .header {
@@ -117,54 +117,10 @@ a {
     .header .logo-social .header-left-icon ul li, .header .logo-social .header-right-icon ul li {
       display: inline-block; }
       .header .logo-social .header-left-icon ul li a, .header .logo-social .header-right-icon ul li a {
+        color: #c80f0f;
         cursor: pointer;
         font-size: 16px;
         padding: 5px 8px; }
-    .header .logo-social .header-left-icon .header-sidebar, .header .logo-social .header-right-icon .header-sidebar {
-      position: absolute;
-      clear: both; }
-      .header .logo-social .header-left-icon .header-sidebar a, .header .logo-social .header-right-icon .header-sidebar a {
-        color: #757575;
-        cursor: pointer;
-        font-size: 22px; }
-      .header .logo-social .header-left-icon .header-sidebar .sidebar-body, .header .logo-social .header-right-icon .header-sidebar .sidebar-body {
-        position: absolute;
-        top: 65px;
-        width: 425px;
-        height: auto;
-        background: #f1f1f1;
-        box-shadow: 0 1px 2px #ddd;
-        z-index: 20; }
-        .header .logo-social .header-left-icon .header-sidebar .sidebar-body .close, .header .logo-social .header-right-icon .header-sidebar .sidebar-body .close {
-          width: 50px;
-          height: 50px;
-          background: #fff;
-          border: 1px solid #b5b5b5;
-          border-radius: 50%;
-          box-shadow: 0 0 10px #ddd;
-          font-size: 23px;
-          font-weight: 300;
-          line-height: 45px;
-          opacity: 1;
-          text-align: center;
-          position: absolute;
-          top: -28px;
-          right: -25px; }
-        .header .logo-social .header-left-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-photo, .header .logo-social .header-right-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-photo {
-          width: 40%; }
-        .header .logo-social .header-left-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-text a, .header .logo-social .header-right-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-text a {
-          color: #fff;
-          font-size: 10px; }
-        .header .logo-social .header-left-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-text h6 a, .header .logo-social .header-right-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-text h6 a {
-          color: #000;
-          font-size: 15px;
-          font-weight: 600; }
-        .header .logo-social .header-left-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-text time, .header .logo-social .header-right-icon .header-sidebar .sidebar-body .latest-post .lpost-item .lpost-text time {
-          color: #515151;
-          font-size: 10px;
-          text-transform: uppercase; }
-      .header .logo-social .header-left-icon .header-sidebar .active, .header .logo-social .header-right-icon .header-sidebar .active {
-        cursor: default; }
     .header .logo-social .header-right-icon #search .modal-content {
       height: 225px;
       -webkit-border-radius: 0;
@@ -218,6 +174,7 @@ a {
         text-transform: uppercase; }
       .header .menu .navbar .navbar-nav .nav-item .dropdown-menu {
         top: 47px;
+        min-width: 173px;
         border: 0;
         border-radius: 0;
         padding: 0; }
@@ -228,12 +185,26 @@ a {
             font-size: 13px;
             text-align: center; }
           .header .menu .navbar .navbar-nav .nav-item .dropdown-menu li:hover {
-            background: #4F7D8E;
+            background: #c80f0f;
             cursor: pointer; }
             .header .menu .navbar .navbar-nav .nav-item .dropdown-menu li:hover a {
               color: #fff; }
+        .header .menu .navbar .navbar-nav .nav-item .dropdown-menu .sub-menu {
+          top: -2px;
+          left: 174px; }
+          .header .menu .navbar .navbar-nav .nav-item .dropdown-menu .sub-menu li {
+            padding: 0 18px; }
+            .header .menu .navbar .navbar-nav .nav-item .dropdown-menu .sub-menu li a {
+              color: #000;
+              font-size: 13px;
+              text-align: center; }
+            .header .menu .navbar .navbar-nav .nav-item .dropdown-menu .sub-menu li:hover {
+              background: #c80f0f;
+              cursor: pointer; }
+              .header .menu .navbar .navbar-nav .nav-item .dropdown-menu .sub-menu li:hover a {
+                color: #fff; }
       .header .menu .navbar .navbar-nav .nav-item:hover {
-        background: #477D8C;
+        background: #c80f0f;
         -webkit-transition: all 0.5s ease;
         -moz-transition: all 0.5s ease;
         -ms-transition: all 0.5s ease;
@@ -518,7 +489,7 @@ a {
     top: 0; }
     .blog-wrapper .side-content .side-header {
       background: #f1f1f1;
-      border-left: 5px solid #4F7D8E;
+      border-left: 5px solid #c80f0f;
       font-weight: 600;
       padding: 8px 20px;
       text-transform: capitalize; }
